# django-bulma

./: MANIFEST.in  README.md  README.org  README.rst  cli.py  pyproject.toml  setup.cfg
bulma/static/bulma/: bulma.min.css
bulma/templates/: avatar.html  base.html  breadcrumb.html  console_form.html  dir_tree.html  empty.html  field_display.html  field_horizontal.html  filters.html  footer.html  form_horizontal.html  form_snippet.html  formset_widget_display.html  index.html  main_menu.html  messages.html  modal.html  navbar.html  navbar2.html  pagination.html  profile_menu.html  project_line.html  reactjs.html  search_bar.html  sorting.html  td_display.html
bulma/templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_set.html  settings.html  signup.html
bulma/templates/accounts/: login_by_invite.html  phone_change.html  profile.html  set_password.html  settings.html  signup_by_invite.html  user_list.html
bulma/templates/django/forms/: default.html  div.html  label.html
bulma/templates/flatpages/: default.html
bulma/templates/registration/: email.html  index.html  logout.html  password_change.html  password_change_form.html  password_reset.html  signup.html
bulma/templates/socialaccount/: login.html
demo/: .gitignore
demo/server/: bulma
demo/server/accounts/: forms.py  models.py  urls.py  views.py
demo/server/server/: settings.py  urls.py
src/django_bulmacss/: apps.py
src/django_bulmacss/templates/: avatar.html  console.html  filters.html  footer.html  form_display.html  form_modal.html  form_submit.html  menus.html  messages.html  render_boolean.html  sorting.html
(+45 files in other folders)
